# p2p-uno

./: pyproject.toml
.github/workflows/: pytest.yml
report/: notes.md
src/p2p_uno/: __init__.py  __main__.py  app.py
src/p2p_uno/frontend/: __init__.py  package-lock.json
test/: test_hello_world.py
